mido/tissot: defconfig: Enable sound control
Signed-off-by: AKabhishek <abhishekkaushik.star@gmail.com>

--- a/arch/arm64/configs/tissot_defconfig
+++ b/arch/arm64/configs/tissot_defconfig
@@ -57,6 +57,12 @@ CONFIG_HAVE_ARCH_AUDITSYSCALL=y
 # CONFIG_AUDITSYSCALL is not set
 
 #
+# Nucleon
+#
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_SOUND_CONTROL=y
+
+#
 # IRQ subsystem
 #
 CONFIG_GENERIC_IRQ_PROBE=y
