--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -62,7 +62,8 @@ CONFIG_AUDIT_TREE=y
 # Nucleon
 #
 CONFIG_FORCE_FAST_CHARGE=y
-
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_SOUND_CONTROL=y
 
 #
 # IRQ subsystem
