--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -59,6 +59,11 @@ CONFIG_AUDIT_WATCH=y
 CONFIG_AUDIT_TREE=y
 
 #
+# Kernel features
+#
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+
+#
 # IRQ subsystem
 #
 CONFIG_GENERIC_IRQ_PROBE=y
