--- a/arch/arm64/configs/tissot_defconfig
+++ b/arch/arm64/configs/tissot_defconfig
@@ -57,6 +57,11 @@ CONFIG_HAVE_ARCH_AUDITSYSCALL=y
 # CONFIG_AUDITSYSCALL is not set
 
 #
+# Kernel features
+#
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+
+#
 # IRQ subsystem
 #
 CONFIG_GENERIC_IRQ_PROBE=y
