--- a/arch/arm64/configs/vince_defconfig
+++ b/arch/arm64/configs/vince_defconfig
@@ -54,7 +54,10 @@ CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 CONFIG_HAVE_ARCH_AUDITSYSCALL=y
-# CONFIG_AUDITSYSCALL is not set
+CONFIG_AUDITSYSCALL=y
+CONFIG_AUDIT_WATCH=y
+CONFIG_AUDIT_TREE=y
+
 
 #
 # Nucleon
@@ -100,10 +103,7 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
 # CONFIG_SCHED_WALT is not set
 # CONFIG_BSD_PROCESS_ACCT is not set
-CONFIG_TASKSTATS=y
-# CONFIG_TASK_DELAY_ACCT is not set
-CONFIG_TASK_XACCT=y
-CONFIG_TASK_IO_ACCOUNTING=y
+# CONFIG_TASKSTATS is not set
 
 #
 # RCU Subsystem
@@ -140,11 +140,14 @@ CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
-# CONFIG_MEMCG is not set
+CONFIG_MEMCG=y
+CONFIG_MEMCG_SWAP=y
+CONFIG_MEMCG_SWAP_ENABLED=y
+# CONFIG_MEMCG_KMEM is not set
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
-# CONFIG_CFS_BANDWIDTH is not set
+CONFIG_CFS_BANDWIDTH=y
 CONFIG_RT_GROUP_SCHED=y
 # CONFIG_BLK_CGROUP is not set
 CONFIG_SCHED_HMP=y
@@ -446,7 +449,7 @@ CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
-CONFIG_ARM64_SW_TTBR0_PAN=y
+# CONFIG_ARM64_SW_TTBR0_PAN is not set
 
 #
 # ARMv8.1 architectural features
@@ -554,6 +557,7 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 #
 # CONFIG_ARM_KIRKWOOD_CPUFREQ is not set
 CONFIG_CPU_FREQ_MSM=y
+CONFIG_ARM64_ERRATUM_843419=y
 CONFIG_NET=y
 CONFIG_COMPAT_NETLINK_MESSAGES=y
 # CONFIG_DISABLE_NET_SKB_FRAG_CACHE is not set
@@ -800,7 +804,7 @@ CONFIG_NF_NAT_H323=y
 CONFIG_IP_NF_IPTABLES=y
 CONFIG_IP_NF_MATCH_AH=y
 CONFIG_IP_NF_MATCH_ECN=y
-CONFIG_IP_NF_MATCH_RPFILTER=y
+# CONFIG_IP_NF_MATCH_RPFILTER is not set
 CONFIG_IP_NF_MATCH_TTL=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
@@ -1112,7 +1116,7 @@ CONFIG_OF_PCI_IRQ=y
 CONFIG_OF_SPMI=y
 CONFIG_OF_RESERVED_MEM=y
 CONFIG_OF_SLIMBUS=y
-# CONFIG_OF_CORESIGHT is not set
+CONFIG_OF_CORESIGHT=y
 CONFIG_OF_BATTERYDATA=y
 # CONFIG_OF_OVERLAY is not set
 # CONFIG_PARPORT is not set
@@ -2209,7 +2213,7 @@ CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_LTC2952 is not set
 CONFIG_POWER_RESET_MSM=y
 CONFIG_MSM_DLOAD_MODE=y
-# CONFIG_MSM_PRESERVE_MEM is not set
+CONFIG_MSM_PRESERVE_MEM=y
 # CONFIG_POWER_RESET_XGENE is not set
 # CONFIG_POWER_RESET_SYSCON is not set
 # CONFIG_POWER_AVS is not set
@@ -3734,13 +3738,13 @@ CONFIG_RMNET_IPA=y
 # CONFIG_I2C_MSM_PROF_DBG is not set
 # CONFIG_SEEMP_CORE is not set
 CONFIG_QPNP_HAPTIC=y
-CONFIG_GPIO_USB_DETECT=y
+# CONFIG_GPIO_USB_DETECT is not set
 CONFIG_MSM_11AD=y
 # CONFIG_BW_MONITOR is not set
 CONFIG_MSM_SPMI=y
 CONFIG_MSM_SPMI_PMIC_ARB=y
 CONFIG_MSM_QPNP_INT=y
-CONFIG_MSM_SPMI_DEBUGFS_RO=y
+# CONFIG_MSM_SPMI_DEBUGFS_RO is not set
 CONFIG_MACH_XIAOMI_MSM8953=y
 
 #
@@ -3808,7 +3812,7 @@ CONFIG_ARM_SMMU=y
 # SOC (System On Chip) specific Drivers
 #
 # CONFIG_MSM_HAB is not set
-# CONFIG_CP_ACCESS64 is not set
+CONFIG_CP_ACCESS64=y
 # CONFIG_MSM_INRUSH_CURRENT_MITIGATION is not set
 CONFIG_MSM_QDSP6_APRV2=y
 # CONFIG_MSM_GLADIATOR_ERP is not set
@@ -3894,7 +3898,7 @@ CONFIG_MSM_KERNEL_PROTECT_MPU=y
 # CONFIG_MSM_BGCOM is not set
 # CONFIG_MSM_REMOTEQDSS is not set
 # CONFIG_QCOM_SMCINVOKE is not set
-CONFIG_QCOM_EARLY_RANDOM=y
+# CONFIG_QCOM_EARLY_RANDOM is not set
 # CONFIG_WCD_DSP_GLINK is not set
 CONFIG_SERIAL_NUM=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
@@ -3950,7 +3954,27 @@ CONFIG_MSM_IRQ=y
 # CONFIG_IPACK_BUS is not set
 # CONFIG_RESET_CONTROLLER is not set
 # CONFIG_FMC is not set
-# CONFIG_CORESIGHT is not set
+CONFIG_CORESIGHT=y
+CONFIG_CORESIGHT_EVENT=y
+CONFIG_HAVE_CORESIGHT_SINK=y
+CONFIG_CORESIGHT_FUSE=y
+CONFIG_CORESIGHT_CTI=y
+CONFIG_CORESIGHT_CTI_SAVE_DISABLE=y
+CONFIG_CORESIGHT_CSR=y
+CONFIG_CORESIGHT_TMC=y
+CONFIG_CORESIGHT_TPIU=y
+CONFIG_CORESIGHT_FUNNEL=y
+CONFIG_CORESIGHT_REPLICATOR=y
+# CONFIG_CORESIGHT_TPDA is not set
+# CONFIG_CORESIGHT_TPDM is not set
+# CONFIG_CORESIGHT_DBGUI is not set
+CONFIG_CORESIGHT_STM=y
+# CONFIG_CORESIGHT_STM_DEFAULT_ENABLE is not set
+CONFIG_CORESIGHT_HWEVENT=y
+# CONFIG_CORESIGHT_ETM is not set
+# CONFIG_CORESIGHT_ETMV4 is not set
+# CONFIG_CORESIGHT_REMOTE_ETM is not set
+# CONFIG_CORESIGHT_QPDI is not set
 
 #
 # PHY Subsystem
@@ -4015,18 +4039,18 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_NILFS2_FS is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
-# CONFIG_FS_ENCRYPTION is not set
+CONFIG_FS_ENCRYPTION=y
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
 # CONFIG_FANOTIFY is not set
 CONFIG_QUOTA=y
-CONFIG_QUOTA_NETLINK_INTERFACE=y
+# CONFIG_QUOTA_NETLINK_INTERFACE is not set
 # CONFIG_PRINT_QUOTA_WARNING is not set
 # CONFIG_QUOTA_DEBUG is not set
 CONFIG_QUOTA_TREE=y
 # CONFIG_QFMT_V1 is not set
-CONFIG_QFMT_V2=y
+# CONFIG_QFMT_V2 is not set
 CONFIG_QUOTACTL=y
 # CONFIG_AUTOFS4_FS is not set
 CONFIG_FUSE_FS=y
@@ -4095,7 +4119,15 @@ CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
-# CONFIG_F2FS_FS is not set
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_CHECK_FS is not set
+CONFIG_F2FS_FS_ENCRYPTION=y
+# CONFIG_F2FS_IO_TRACE is not set
+# CONFIG_F2FS_FAULT_INJECTION is not set
 # CONFIG_EFIVAR_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
@@ -4225,7 +4257,7 @@ CONFIG_PANIC_ON_RECURSIVE_FAULT=y
 # CONFIG_PANIC_ON_SCHED_BUG is not set
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
 CONFIG_SCHEDSTATS=y
-CONFIG_SCHED_STACK_END_CHECK=y
+# CONFIG_SCHED_STACK_END_CHECK is not set
 CONFIG_TIMER_STATS=y
 CONFIG_DEBUG_PREEMPT=y
 
@@ -4412,7 +4444,7 @@ CONFIG_CRYPTO_SEQIV=y
 #
 CONFIG_CRYPTO_CBC=y
 CONFIG_CRYPTO_CTR=y
-# CONFIG_CRYPTO_CTS is not set
+CONFIG_CRYPTO_CTS=y
 CONFIG_CRYPTO_ECB=y
 # CONFIG_CRYPTO_LRW is not set
 # CONFIG_CRYPTO_PCBC is not set
@@ -4430,7 +4462,7 @@ CONFIG_CRYPTO_XCBC=y
 # Digest
 #
 CONFIG_CRYPTO_CRC32C=y
-# CONFIG_CRYPTO_CRC32 is not set
+CONFIG_CRYPTO_CRC32=y
 # CONFIG_CRYPTO_CRCT10DIF is not set
 # CONFIG_CRYPTO_GHASH is not set
 CONFIG_CRYPTO_MD4=y
