--- a/arch/arm/boot/dts/qcom/tissot/dsi-panel-otm1911-fhd-video.dtsi
+++ b/arch/arm/boot/dts/qcom/tissot/dsi-panel-otm1911-fhd-video.dtsi
@@ -34,13 +34,7 @@
 		qcom,mdss-dsi-bpp = <24>;
 		qcom,mdss-dsi-underflow-color = <0xff>;
 		qcom,mdss-dsi-border-color = <0>;
-		qcom,mdss-dsi-on-command = [
-					39 01 00 00 00 00 02 51 FF
-					39 01 00 00 00 00 02 53 2c
-					39 01 00 00 00 00 02 55 00
-
-					39 01 00 00 78 00 02 11 00
-					39 01 00 00 14 00 02 29 00];
+		qcom,mdss-dsi-on-command = [39 01 00 00 00 00 02 51 ff 39 01 00 00 00 00 02 53 2c 39 01 00 00 00 00 02 55 00 39 01 00 00 78 00 02 11 00 39 01 00 00 14 00 02 29 00];
 
 		qcom,mdss-dsi-off-command = [39 01 00 00 32 00 02 28 00
 					39 01 00 00 78 00 02 10 00
