--- a/arch/arm64/configs/vince_defconfig
+++ b/arch/arm64/configs/vince_defconfig
@@ -58,7 +58,6 @@ CONFIG_AUDITSYSCALL=y
 CONFIG_AUDIT_WATCH=y
 CONFIG_AUDIT_TREE=y
 
-
 #
 # Nucleon
 #
@@ -140,14 +139,11 @@ CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
-CONFIG_MEMCG=y
-CONFIG_MEMCG_SWAP=y
-CONFIG_MEMCG_SWAP_ENABLED=y
-# CONFIG_MEMCG_KMEM is not set
+# CONFIG_MEMCG is not set
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
-CONFIG_CFS_BANDWIDTH=y
+# CONFIG_CFS_BANDWIDTH is not set
 CONFIG_RT_GROUP_SCHED=y
 # CONFIG_BLK_CGROUP is not set
 CONFIG_SCHED_HMP=y
@@ -550,7 +546,7 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CPU frequency scaling drivers
 #
 # CONFIG_CPUFREQ_DT is not set
-# CONFIG_CPU_BOOST is not set
+CONFIG_CPU_BOOST=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -804,7 +800,7 @@ CONFIG_NF_NAT_H323=y
 CONFIG_IP_NF_IPTABLES=y
 CONFIG_IP_NF_MATCH_AH=y
 CONFIG_IP_NF_MATCH_ECN=y
-# CONFIG_IP_NF_MATCH_RPFILTER is not set
+CONFIG_IP_NF_MATCH_RPFILTER=y
 CONFIG_IP_NF_MATCH_TTL=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
@@ -1314,15 +1310,7 @@ CONFIG_SCSI_UFS_QCOM_ICE=y
 CONFIG_HAVE_PATA_PLATFORM=y
 # CONFIG_ATA is not set
 CONFIG_MD=y
-CONFIG_BLK_DEV_MD=y
-CONFIG_MD_AUTODETECT=y
-CONFIG_MD_LINEAR=y
-# CONFIG_MD_RAID0 is not set
-# CONFIG_MD_RAID1 is not set
-# CONFIG_MD_RAID10 is not set
-# CONFIG_MD_RAID456 is not set
-# CONFIG_MD_MULTIPATH is not set
-# CONFIG_MD_FAULTY is not set
+# CONFIG_BLK_DEV_MD is not set
 # CONFIG_BCACHE is not set
 CONFIG_BLK_DEV_DM_BUILTIN=y
 CONFIG_BLK_DEV_DM=y
@@ -2203,7 +2191,7 @@ CONFIG_BATTERY_BCL=y
 # CONFIG_QPNP_VM_BMS is not set
 # CONFIG_QPNP_BMS is not set
 # CONFIG_QPNP_LINEAR_CHARGER is not set
-CONFIG_QPNP_TYPEC=y
+# CONFIG_QPNP_TYPEC is not set
 CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
 CONFIG_POWER_RESET=y
@@ -3346,7 +3334,7 @@ CONFIG_USB_MSM_HSPHY=y
 CONFIG_USB_MSM_SSPHY_QMP=y
 CONFIG_MSM_QUSB_PHY=y
 # CONFIG_USB_ULPI is not set
-CONFIG_DUAL_ROLE_USB_INTF=y
+# CONFIG_DUAL_ROLE_USB_INTF is not set
 CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG is not set
 CONFIG_USB_GADGET_DEBUG_FILES=y
