--- a/drivers/input/fingerprint/fpc/Kconfig
+++ b/drivers/input/fingerprint/fpc/Kconfig
@@ -1,4 +1,4 @@
-config FINGERPRINT_FPC1020_TISSOT
+config FINGERPRINT_FPC1020
 	tristate "FingerPrint Cards fingerprint driver support"
 	depends on INPUT_FINGERPRINT
 	help
