--- a/arch/arm64/configs/tissot_defconfig
+++ b/arch/arm64/configs/tissot_defconfig
@@ -60,6 +60,7 @@ CONFIG_HAVE_ARCH_AUDITSYSCALL=y
 # Kernel features
 #
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # IRQ subsystem
